fix text alignment issue when sitting down

--- a/website/css/game.css
+++ b/website/css/game.css
@@ -135,6 +135,11 @@ a.sit-link {
     font-style: italic;
 }
 
+.disabled-link {
+    font-style: italic;
+    color: gray;
+}
+
 .hint-you {
     font-style: italic;
 }
